--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div>
             <h1>Hello World</h1>
-            <h2>My Name is Sushant</h2>
+            <h2>My Name is Sushant And i stay in Bhiwandi</h2>
         </div>
     </body>
 </head>
